--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -9,7 +9,7 @@ on:
 #Jobs
 jobs:
   build: 
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
