--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -8,12 +8,16 @@ on:
     branches: [master]
 #Jobs
 jobs:
-  build: 
+  build:
+    env: CI
+    strategy:
+      matrix: [14.x, 16.x]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: {{ strategy.matrix }}
       - run: npm install
       - run: npm run build --prefix client
+      - run: npm run test
