--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -9,7 +9,8 @@ on:
 #Jobs
 jobs:
   build:
-    env: CI
+    env: 
+      CI: true
     strategy:
       matrix: [14.x, 16.x]
     runs-on: ubuntu-latest
