--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -12,13 +12,14 @@ jobs:
     env: 
       CI: true
     strategy:
-      matrix: [14.x, 16.x]
+      matrix: 
+        node-version: [14.x, 16.x]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: {{ strategy.matrix }}
+          node-version: {{ matrix.node-version }}
       - run: npm install
       - run: npm run build --prefix client
       - run: npm run test
