--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: {{ matrix.node-version }}
+          node-version: ${{ matrix.node-version }}
       - run: npm install
       - run: npm run build --prefix client
       - run: npm run test
