--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -14,12 +14,16 @@ jobs:
     strategy:
       matrix: 
         node-version: [14.x, 16.x]
+        mongodb-version: ['6.0']
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+      - name: mongoDB Action
+        uses: supercharge/mongodb-github-action@1.12.0
+        with: ${{ matrix.mongodb-version }}
       - run: npm install
       - run: npm run build --prefix client
       - run: npm run test
