--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -11,6 +11,7 @@ jobs:
   build:
     env: 
       CI: true
+      MONGO_URL: mongo://localhost/nasa 
     strategy:
       matrix: 
         node-version: [14.x, 16.x]
